提交查询所有的接口

--- a/src/main/webapp/static/html/ajaxcase.html
+++ b/src/main/webapp/static/html/ajaxcase.html
@@ -25,10 +25,8 @@
                     for(var i=0;i<req.data.length;i++)
                     {
                         var map=req.data[i];
-                        for(key in map)
-                        {
-                            alert(key+":"+map[key])
-                        }
+                        alert(map['user_id'])
+
                     }
                 }
                 else
